feat: add documentation for create opening.
